RESOLVED FIXED152541
REGRESSION (r187593): Scroll position jumps when selecting text in an iframe
https://bugs.webkit.org/show_bug.cgi?id=152541
Summary REGRESSION (r187593): Scroll position jumps when selecting text in an iframe
Simon Fraser (smfr)
Reported 2015-12-23 16:09:36 PST
REGRESSION (r190487): Scroll position jumps when selecting text in an iframe
Attachments
Patch (26.09 KB, patch)
2015-12-23 16:21 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2015-12-23 16:21:00 PST
Simon Fraser (smfr)
Comment 2 2015-12-23 16:21:45 PST
Tim Horton
Comment 3 2015-12-23 16:32:04 PST
Comment on attachment 267877 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=267877&action=review > Source/WebCore/platform/graphics/IntPoint.cpp:40 > +IntPoint IntPoint::constrainedBetween(const IntPoint& min, const IntPoint& max) const A bunch of things do .expandedTo().shrunkTo() to achieve this. Please consider adopting constrainedBetween in some of those places, it makes a looooot more sense. > Source/WebCore/rendering/RenderLayer.cpp:2456 > + // This will prevent us from revealing text hidden by the slider in Safari RSS. Wat
Simon Fraser (smfr)
Comment 4 2015-12-23 20:55:22 PST
Note You need to log in before you can comment on or make changes to this bug.