Source/WebCore/platform/graphics/IntPoint.cpp
@@ -37,6 +37,15 @@ IntPoint::IntPoint(const FloatPoint& p)
 {
 }
 
+IntPoint IntPoint::constrainedBetween(const IntPoint& min, const IntPoint& max) const
+{
+    return {
+        std::max(min.x(), std::min(max.x(), m_x)),
+        std::max(min.y(), std::min(max.y(), m_y))
+    };
+}
+
+
 TextStream& operator<<(TextStream& ts, const IntPoint& p)
 {
     return ts << "(" << p.x() << "," << p.y() << ")";
