Source/WebCore/platform/graphics/IntPoint.h
@@ -84,15 +84,21 @@ public:
     
     IntPoint expandedTo(const IntPoint& other) const
     {
-        return IntPoint(m_x > other.m_x ? m_x : other.m_x,
-            m_y > other.m_y ? m_y : other.m_y);
+        return {
+            m_x > other.m_x ? m_x : other.m_x,
+            m_y > other.m_y ? m_y : other.m_y
+        };
     }
 
     IntPoint shrunkTo(const IntPoint& other) const
     {
-        return IntPoint(m_x < other.m_x ? m_x : other.m_x,
-            m_y < other.m_y ? m_y : other.m_y);
+        return {
+            m_x < other.m_x ? m_x : other.m_x,
+            m_y < other.m_y ? m_y : other.m_y
+        };
     }
+
+    IntPoint constrainedBetween(const IntPoint& min, const IntPoint& max) const;
 
     int distanceSquaredToPoint(const IntPoint&) const;
 
